--- a/Changelog
+++ b/Changelog
@@ -2,3 +2,5 @@
 - Изменена структура программы, теперь вместо 1 большого ветвления много модулей
 - Пофикшен баг  концовки, когда программа воспринимает неправильный ответ в качестве ответа "меня"
 - Добавлена новая фишка: если ввесли одно из следующих имен: "Путин", "Обама" или "Рамзан Кадыров", выскочит соответствующий текст
+Версия 0.0.2 (fix)
+- Исправлены вылеты без показа концовки
