--- a/Changelog
+++ b/Changelog
@@ -4,3 +4,6 @@
 - Добавлена новая фишка: если ввесли одно из следующих имен: "Путин", "Обама" или "Рамзан Кадыров", выскочит соответствующий текст
 Версия 0.0.2 (fix)
 - Исправлены вылеты без показа концовки
+Версия 0.0.3
+- Реализован рандом, теперь вы можете бросить кости!
+- Вырезана возможность простого выбора
